another correction on mobile

--- a/src/style/Hero.css
+++ b/src/style/Hero.css
@@ -133,7 +133,7 @@
 /* Content */
 .hero-slide-content {
   position: relative;
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -176,7 +176,7 @@
 /* Navigation Arrows */
 .hero-nav-arrow {
   position: absolute;
-  top: 50%;
+  top: 40%;
   transform: translateY(-50%);
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.1);
@@ -337,6 +337,7 @@
   .hero-slide-content {
     padding: 0 2rem;
     padding-bottom: 12rem;
+    height: 100vh;
   }
 
   .hero-brand {
